# Cheap-Quake-Engine-

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Axiom/: CMakeLists.txt  Entrypoint.cpp
Axiom/Core/: Application.cpp  Application.h  Base.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Window.h
Axiom/Core/Events/: EngineEvents.h  EventBus.h
Axiom/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Axiom/Core/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Axiom/Renderer/: Renderer.cpp  Renderer.h
Axiom/Renderer/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBufer.cpp  VertexBuffer.h
Axiom/Renderer/Camera/: Camera.cpp
Axiom/Renderer/Mesh/: Mesh.cpp  Mesh.h
Axiom/Renderer/OpenGL/: GLContext.cpp  GLContext.h  GLIndexBuffer.cpp  GLIndexBuffer.h  GLShader.cpp  GLShader.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
Axiom/Renderer/Shader/: Shader.cpp  Shader.h
Quake Engine/: CMakeLists.txt  Quake Engine.cpp  Quake Engine.h
Quake_Engine/: CMakeLists.txt  Entrypoint.cpp
Quake_Engine/Core/: Application.cpp  Application.h
Sandbox/: CMakeLists.txt  Sandbox.cpp
